src/tests/snapshots/swayward__tests__window_opening__check_target_size@fsF-omT-b.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-fullscreen false\n    open-maximized true\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1240 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 1240 × 658, bounds: 1240 × 680, states: [Activated]
